--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B5E61D"
     tools:context=".SecondActivity">
 
     <TextView
@@ -11,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Shot Tracker"
-        android:textSize="32sp"
+        android:textStyle="bold"
+        android:textColor="#090909"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.44"
@@ -23,73 +26,79 @@
         android:id="@+id/SetHomeCoursebtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:background="#EE44D1"
         android:text="Set Home Course"
         app:layout_constraintBottom_toTopOf="@+id/MyLeaguesbtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.698" />
-
-    <Button
-        android:id="@+id/UploadNewScorebtn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="Upload New Score"
-        app:layout_constraintBottom_toTopOf="@+id/ViewHandicapbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.7" />
 
     <Button
+        android:id="@+id/UploadScorebtn"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="#1689F8"
+        android:text="Upload New Score"
+        app:layout_constraintBottom_toTopOf="@+id/ViewHandicapbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.687" />
+
+    <Button
         android:id="@+id/MyLeaguesbtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:text="My Leagues"
+        android:background="#F3F544  "
+        android:text="Course Tips"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.513" />
 
     <Button
         android:id="@+id/ViewHandicapbtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:background="#F36939  "
         android:text="View Handicap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.77"
+        app:layout_constraintHorizontal_bias="0.891"
         app:layout_constraintStart_toEndOf="@+id/MyLeaguesbtn"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.521" />
 
     <Button
         android:id="@+id/CourseOverviewbtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:background="#0AF191 "
         android:text="Course Overview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.709" />
+        app:layout_constraintVertical_bias="0.708" />
 
     <Button
         android:id="@+id/MyGoalsbtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:background="#A70D47  "
         android:text="My Goals"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="@+id/CourseOverviewbtn"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.709" />
+        app:layout_constraintVertical_bias="0.707" />
 
     <Button
         android:id="@+id/Logoutbtn"
